# alexa_conversation

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: alexa_conversation.launch  test.launch
script/: TESTING_conversation.py  TUTORIAL + DESCRIZIONE  TentativiPY.py  Timer_prova.py  WritingTEST.json  WritingTEST_PY.json  conversation.py  database.json  newserver.js  postreq.py  posttry.js  template.json  tf_node.py
scripts/: WritingTEST_PY.json  database.json  newserver.js  postreq.py  posttry.js
